@@ -1,10 +1,7 @@
 package com.fanwe.lib.utils;
 
-import android.text.TextUtils;
-
 import java.net.InetAddress;
-import java.net.URI;
-import java.net.UnknownHostException;
+import java.net.URL;
 
 /**
  * 网络工具类
@@ -16,21 +13,21 @@ public final class FNetUtil
     }
 
     /**
-     * 域名是否可用，只能在后台线程调用
+     * 返回url的IP地址
      *
-     * @param host
+     * @param url
      * @return
      */
-    public static boolean isHostAvailable(String host)
+    public static String getHostAddress(String url)
     {
         try
         {
-            InetAddress inetAddress = InetAddress.getByName(host);
-            String hostAddress = inetAddress.getHostAddress();
-            return !TextUtils.isEmpty(hostAddress);
-        } catch (UnknownHostException e)
+            final String host = new URL(url).getHost();
+            final String hostAddress = InetAddress.getByName(host).getHostAddress();
+            return hostAddress;
+        } catch (Exception e)
         {
-            return false;
+            return null;
         }
     }
 
@@ -38,11 +35,9 @@ public final class FNetUtil
     {
         try
         {
-            URI uri = new URI(url);
-            return uri.getHost();
+            return new URL(url).getHost();
         } catch (Exception e)
         {
-            e.printStackTrace();
             return null;
         }
     }
